# var-from-scratch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: autoencoder.ipynb  kl_divergence.ipynb  var_dummy.ipynb  var_model.ipynb  variational_autoencoder.ipynb  vq_vae.ipynb
scripts/: train_transformer.py  train_vqvae.py
src/: transformer.py  utils.py  var.py  vqvae.py
