[project]
name = "var-from-scratch"
version = "0.1.0"
description = "The most normie implementation of VAR to ever exist."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
    "uv>=0.9.11",
]
